--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,1 @@
-<div class="social-links">
-  {% for link in site.data.social.links %}
-  <a href="{{ link.url }}" target="_blank" rel="noopener"><span class="fab {{ link.icon }}"
-      aria-hidden="true"></span><span class="screen-reader-text">{{ link.title }}</span></a>
-  {% endfor %}
-</div><!-- .social-links -->
+<!-- no content -->
