--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,9 +1,1 @@
-<section class="subscribe">
-  <div class="inner">
-    <h2 class="subscribe-title">{{ site.data.subscribe.title }}</h2>
-    <p class="subscribe-text">
-      {{ site.data.subscribe.content }}
-    </p>
-    {% include subscribe_form.html %}
-  </div><!-- inner -->
-</section><!-- .subscribe -->
+<!-- no content -->
