--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,20 +1,78 @@
 <!doctype html>
 <html>
-    <head>    
-        
-        <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="google" content="notranslate" />
-        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i%7CPT+Serif:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
-        
-    </head>
-    <body>
-        
-        {{ content }}
-        <!-- Scripts -->
-        <script src="{{ 'assets/js/plugins.js' | relative_url }}"></script>
-        <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
-    </body> 
+<head>    
+    
+    <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google" content="notranslate" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i%7CPT+Serif:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
+    
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    
+
+    <script src="https://katrinsnellartist.co.uk/catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <!-- <link href="https://katrinsnellartist.co.uk/catalog/view/javascript/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" /> -->
+    <script src="https://katrinsnellartist.co.uk/catalog/view/javascript/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <link href="https://katrinsnellartist.co.uk/catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,300,700" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Ledger" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Shanti" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
+    <link href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/stylesheet.css" rel="stylesheet" />
+    <link href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/baguetteBox.css" rel="stylesheet" />
+    <link href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/gallery-grid.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/baguetteBox.js"></script>
+
+
+    <link rel="stylesheet" type="text/css" href="https://katrinsnellartist.co.uk/catalog/view/javascript/jquery/magnific/magnific-popup.css" />
+    <link rel="stylesheet" type="text/css" href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/megnor/carousel.css" />
+    <link rel="stylesheet" type="text/css" href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/megnor/custom.css" />
+    <link rel="stylesheet" type="text/css" href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/megnor/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://katrinsnellartist.co.uk/catalog/view/theme/OPC070159/stylesheet/megnor/animate.css" />
+
+
+    <link href="style.href" type="text/css" rel="style.rel" media="style.media" />
+    <link href="style.href" type="text/css" rel="style.rel" media="style.media" />
+
+
+    <link href="https://katrinsnellartist.co.uk/catalog/view/javascript/jquery/swiper/css/swiper.min.css" type="text/css" rel="stylesheet" media="screen" />
+    <link href="https://katrinsnellartist.co.uk/catalog/view/javascript/jquery/swiper/css/opencart.css" type="text/css" rel="stylesheet" media="screen" />
+    <script src="https://katrinsnellartist.co.uk/catalog/view/javascript/jquery/swiper/js/swiper.jquery.js" type="text/javascript"></script>
+    <script src="https://katrinsnellartist.co.uk/catalog/view/javascript/common.js" type="text/javascript"></script>
+    <link href="https://katrinsnellartist.co.uk/image/catalog/cart.png" rel="icon" />
+    <!-- Megnor www.templatemela.com - Start -->
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/custom.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/jstree.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/carousel.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/megnor.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/jquery.custom.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/scrolltop.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/jquery.formalize.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/jquery.elevatezoom.min.js"></script>
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/megnor/bootstrap-notify.min.js"></script>  
+    <script type="text/javascript" src="https://katrinsnellartist.co.uk/catalog/view/javascript/jquery/magnific/jquery.magnific-popup.min.js"></script>
+    <!-- Added -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/brands.css" integrity="sha384-BKw0P+CQz9xmby+uplDwp82Py8x1xtYPK3ORn/ZSoe6Dk3ETP59WCDnX+fI1XCKK" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
+    <!-- Megnor www.templatemela.com - End -->
+
+    <script src="https://katrinsnellartist.co.uk/catalog/view/javascript/common.js" type="text/javascript"></script>
+
+
+
+
+
+    
+</head>
+<body>
+    
+    {{ content }}
+    <!-- Scripts -->
+    <script src="{{ 'assets/js/plugins.js' | relative_url }}"></script>
+    <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ 'admin/netlify-identity.js' | relative_url }}"></script>
+</body> 
 </html>
